--- a/semana-oministack/web/src/sidebar.css
+++ b/semana-oministack/web/src/sidebar.css
@@ -31,6 +31,10 @@ aside {
     gap: 20px;
     grid-template-columns: 1fr 1fr;
   }
+
+  aside form .input-group .input-block{
+    margin-top: 0;
+  }
   
   aside form .input-block label {
     color: #ACACAC;
