--- a/semana-oministack/web/src/main.css
+++ b/semana-oministack/web/src/main.css
@@ -9,6 +9,13 @@ main ul{
     list-style: none;
 }
 
+@media(max-width: 650px){
+    main ul{
+        grid-template-columns: 1fr;
+    }
+}
+
+
 li.dev-item{
     background: #fff;
     box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.02);
@@ -50,6 +57,7 @@ li.dev-item p{
     font-size: 20px;
     line-height: 20px;
     margin: 10px 0;
+    font-size: medium;
 }
 
 li.dev-item a{
